# imtile

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  paper.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
imtile/: __init__.py  backend.py  tiler.py
tests/: conftest.py  test_tiler.py
