[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "imtile"
version = "0.1.1"
description = "Lightweight image tiling and reconstruction for computer vision and deep learning pipelines."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "Omar Kamel"},
]
keywords = [
    "image-tiling",
    "sliding-window",
    "deep-learning",
    "computer-vision",
    "segmentation",
    "inference",
    "overlap",
    "patchify",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.20",
]

[project.optional-dependencies]
gpu = ["cupy-cuda12x"]
dev = [
    "pytest>=7.0",
    "build",
    "twine",
]

[project.urls]
Homepage = "https://github.com/omarkamelte/imtile"
Repository = "https://github.com/omarkamelte/imtile"
Issues = "https://github.com/omarkamelte/imtile/issues"

[tool.setuptools.packages.find]
include = ["imtile*"]
